# notpong

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
notpong/: game.py  input.py  main.py  render.py
